attempting to find issue whe images won't load on mobile

--- a/style.css
+++ b/style.css
@@ -203,7 +203,8 @@ img {max-width: 100%;
 
 .photogrid img {padding: .2em;}
 
-.row1, .row2 {padding: 0;}
+.row1, .row2 {padding: 0;
+}
 
 
 
